src/static/css/style.css
h1 {
  font-size: 4.5em;
}

h2 {
  font-size: 3.5em;
}

h3 {
  font-size: 2.5em;
}

p {
  font-size: 1em;
}

li {
  font-size: 1.4em;
}

body {
  background-color: #1a1a1a;
  color: aliceblue;
  font-family: monospace, Arial, sans-serif;
}

:root {
  color-scheme: dark light;
}

.form-input {
  background-color: #292929;
  color: rgb(177, 177, 177);
}

.container {
  position: absolute;
  top: 3em;
  left: 50%;
  transform: translate(-50%, 0%);
  max-width: 75em;
  max-height: 85em;
  width: auto;
  height: auto;
}

.long-btn {
  border-radius: 3em;
  width: 100%;
}

.btn-to-reg {
  margin-top: 2em;
}

.small-pwd {
  font-size: 0.7em;
}

.flash-msg {
  text-align: center;
  padding: 0.1em;
  border-radius: 3em;
}

.flash-msg.message {
  border: 0.02em solid #01d031;
  background: #4fcb72;
}

.flash-msg.error {
  border: 0.02em solid #c80000;
  background: #da5555;
}

.user-coard {
  padding: 0.1em;
  padding-left: 0.7em;
  padding-right: 0.7em;
  border-radius: 3em;
  border: 0.02em solid #858585;
}

.user-info {
  transform: translate(0%, 30%);
}

